--- a/client/src/PostList.css
+++ b/client/src/PostList.css
@@ -1,5 +1,5 @@
 body {
-  /*background-image: url("./hello4.jpeg");*/
+  background-image: url("./hello4.jpeg");
   background-color: #3d3d3d;
   background-size: cover;
   background-repeat: no-repeat;
